Updates to fix issue with footer and icons not showing correctly

--- a/src/pages/DatasetOnboarding/DatasetOnboarding.scss
+++ b/src/pages/DatasetOnboarding/DatasetOnboarding.scss
@@ -527,24 +527,12 @@ input[type='radio']:disabled {
 	display: flex;
 	flex-flow: row nowrap;
 	align-items: center;
-	box-sizing: border-box;
-	position: sticky !important;
-	margin-bottom: -30px;
-	padding: 0 24px;
-	left: 0;
-	bottom: 0;
 	width: 100%;
-	min-height: 72px;
-	background-color: $white;
-	box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.09);
-	z-index: 1000;
 
 	&-status {
 		display: inline-block;
 	}
-
-	&--questions {
-		flex: 1 0 0;
+	ß &--questions {
 		@include font-source(14px, $gray-800, $font-weight-semibold);
 		p {
 			margin-bottom: 0;
